# hcl_processor

./: .gitignore  README.md  pyproject.toml  renovate.json  requirements.txt  test.py  third_party_licenses.md
.github/: release-drafter.yml
.github/workflows/: ci.yaml  code-check.yaml  main-ci.yaml  release.yaml  unittest.yaml
e2e_tests/: e2e_config.yaml  e2e_config_chunk.yaml  e2e_config_files.yaml  run_e2e_test.sh  test_e2e.py
e2e_tests/test_data/dev/: locals.tf
e2e_tests/test_data/modules/monitor/: main.tf
e2e_tests/test_data/monitor/: large_monitors.tf  sample_monitor.tf
e2e_tests/test_data/prd/: locals.tf
e2e_tests/test_data/resource/: simple_resource.tf
e2e_tests/test_data/stg/: locals.tf
sample/: bedrock_config.yaml
src/hcl_processor/: bedrock_client.py  cli.py  config_loader.py  file_processor.py  gemini_client.py  llm_provider.py  logger_config.py  main.py  output_writer.py  provider_factory.py  utils.py
src/hcl_processor/config/: system_config.py  system_config.yaml
tests/: test_bedrock_client.py  test_cli.py  test_config_loader.py  test_file_processor.py  test_gemini_client.py  test_logger_config.py  test_main.py  test_output_writer.py  test_utils.py
tools/: model_checker.py  update_licenses.py
