[tool.poetry]
name = "hcl-processor"
version = "0.9.0-a"
description = "A tool for analyzing HCL files."
authors = ["S-mishina <45090872+S-mishina@users.noreply.github.com>"]
packages = [{ include = "hcl_processor", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-hcl2 = "7.2.1"
attrs = "25.3.0"
boto3 = "1.38.17"
botocore = "1.38.18"
Cerberus = "1.3.7"
jmespath = "1.0.1"
jsonschema = "4.23.0"
jsonschema-specifications = "2025.4.1"
lark = "1.2.2"
Jinja2 = "3.1.3"
prettytable = "3.16.0"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
PyYAML = "6.0.2"
referencing = "0.36.2"
rpds-py = "0.25.0"
s3transfer = "0.12.0"
six = "1.17.0"
tabulate = "0.9.0"
tomli = "2.2.1"
tzdata = "2025.2"
wcwidth = "0.2.13"

[tool.poetry.scripts]
hcl-processor = "hcl_processor.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
