[tool.poetry]
name = "hcl-processor"
version = "0.15.0-rc"
description = "A tool for analyzing HCL files."
authors = ["S-mishina <45090872+S-mishina@users.noreply.github.com>"]
packages = [{ include = "hcl_processor", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-hcl2 = "7.3.1"
attrs = "26.1.0"
boto3 = "1.42.81"
botocore = "1.42.81"
Cerberus = "1.3.8"
jmespath = "1.1.0"
jsonschema = "4.26.0"
jsonschema-specifications = "2025.9.1"
lark = "1.3.1"
Jinja2 = "3.1.6"
prettytable = "3.17.0"
python-dateutil = "2.9.0.post0"
pytz = "2026.1.post1"
PyYAML = "6.0.3"
referencing = "0.37.0"
rpds-py = "0.30.0"
s3transfer = "0.16.0"
six = "1.17.0"
tabulate = "0.10.0"
tomli = "2.4.1"
tzdata = "2025.3"
wcwidth = "0.6.0"

[tool.poetry.scripts]
hcl-processor = "hcl_processor.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
